add report for Manalyze Clamav plugin

--- a/thehive-templates/FileInfo_4_0/long.html
+++ b/thehive-templates/FileInfo_4_0/long.html
@@ -436,7 +436,7 @@
                                 </dl>
                             </div>
                             <div uib-accordion-group
-                                 ng-if="r.submodule_section_header!=='Manalyze raw output'  && r.submodule_section_header!=='Exploit mitigation techniques' && r.submodule_section_header!=='Packer' "
+                                 ng-if="r.submodule_section_header!=='Manalyze raw output'  && r.submodule_section_header!=='Exploit mitigation techniques' && r.submodule_section_header!=='Packer' && r.submodule_section_header!=='Clamav'"
                                  ng-class="{'panel-danger': r.submodule_section_content.level === 3, 'panel-warning': r.submodule_section_content.level === 2, 'panel-info': r.submodule_section_content.level <= 1}"
                                  heading="{{r.submodule_section_header}}" is-open="true"
                                  is-disabled="status.isFirstDisabled">
@@ -452,7 +452,17 @@
                                     </tr>
                                 </table>
                             </div>
-
+                            <div uib-accordion-group
+                                 ng-if="r.submodule_section_header== 'Clamav' "
+                                 ng-class="{'panel-danger': r.submodule_section_content.level === 3, 'panel-warning': r.submodule_section_content.level === 2, 'panel-info': r.submodule_section_content.level <= 1}"
+                                 heading="{{r.submodule_section_header}}" is-open="true"
+                                 is-disabled="status.isFirstDisabled">
+                                <p><b>Summary</b>: {{r.submodule_section_content.summary || "None" }}</p>
+                                <dl class="dl-horizontal" ng-repeat="(k, v) in r.submodule_section_content.content">
+                                    <dt>{{k}}</dt>
+                                    <dd>{{v}}</dd>
+                                </dl>
+                            </div>
                             <div uib-accordion-group
                                  ng-if="r.submodule_section_header== 'Packer' "
                                  ng-class="{'panel-danger': r.submodule_section_content.level === 3, 'panel-warning': r.submodule_section_content.level === 2, 'panel-info': r.submodule_section_content.level <= 1}"
