Fix Fortiguard reclassification request URL
Per issue https://github.com/TheHive-Project/Cortex-Analyzers/issues/345, request reclassification URL changed. Fixing report to reflect new URL.

--- a/thehive-templates/Fortiguard_URLCategory_2_1/long.html
+++ b/thehive-templates/Fortiguard_URLCategory_2_1/long.html
@@ -10,7 +10,7 @@
                 <i class="fa fa-search"></i>
                 <a ng-href="http://www.fortiguard.com/iprep?data={{artifact.data}}&lookup=Lookup" target="_blank">View Full Report</a>
                 <i class="fa fa-recycle"></i>
-                <a ng-href="http://www.fortiguard.com/iprep_form?data={{artifact.data}}" target="_blank">Request Recategorization</a>
+                <a ng-href="https://fortiguard.com/faq/wfratingsubmit?url={{artifact.data}}" target="_blank">Request Recategorization</a>
             </dd>
         </dl>
     </div>
