--- a/thehive-templates/FileInfo_5_0/long.html
+++ b/thehive-templates/FileInfo_5_0/long.html
@@ -497,7 +497,7 @@
                                  ng-class="{'panel-danger': r.submodule_section_content.class === 'malicious', 'panel-warning': r.submodule_section_content.class === 'suspicious', 'panel-info': r.submodule_section_content.class === 'info'}"
                                  heading="{{r.submodule_section_header}}" is-open="true"
                                  is-disabled="status.isFirstDisabled">
-                                <table>
+                                <table class="table">
                                     <thead>
                                     <tr><td>Address</td><td>OLE Object</td><td>OLE Package</td></tr>
                                     </thead>
