--- a/thehive-templates/FileInfo_5_0/long.html
+++ b/thehive-templates/FileInfo_5_0/long.html
@@ -514,6 +514,10 @@
                                                 <dd>{{r.submodule_section_content.filename}}</dd>
                                                 <dt>Size</dt>
                                                 <dd>{{r.submodule_section_content.size}}</dd>
+                                                <dt>CLSID</dt>
+                                                <dd>{{r.submodule_section_content.clsid}}</dd>
+                                                <dt>Description</dt>
+                                                <dd>{{r.submodule_section_content.clsid_description}}</dd>
                                             </dl>
                                         </td>
                                         <td>Not implemented yet</td>
