#360 fix long report template

--- a/thehive-templates/FileInfo_5_0/long.html
+++ b/thehive-templates/FileInfo_5_0/long.html
@@ -527,18 +527,25 @@
                                             <dl class="dl-horizontal">
                                                 <dt>Type</dt>
                                                 <dd>{{r.submodule_section_content.type}}</dd>
+
                                                 <dt>Classname</dt>
                                                 <dd>{{r.submodule_section_content.classname}}</dd>
+
                                                 <dt>Filename</dt>
                                                 <dd>{{r.submodule_section_content.filename}}</dd>
-                                                <dd>Source path</dd>
-                                                <dt>{{r.submodule_section_content.source_path}}</dt>
-                                                <dd>Temp path</dd>
-                                                <dt>{{r.submodule_section_content.temp_path}}</dt>
+
+                                                <dt>Source path</dt>
+                                                <dd>{{r.submodule_section_content.source_path}}</dd>
+
+                                                <dt>Temp path</dt>
+                                                <dd>{{r.submodule_section_content.temp_path}}</dd>
+
                                                 <dt>Size</dt>
                                                 <dd>{{r.submodule_section_content.size}}</dd>
+
                                                 <dt>CLSID</dt>
                                                 <dd>{{r.submodule_section_content.clsid}}</dd>
+
                                                 <dt>CLSID description</dt>
                                                 <dd>{{r.submodule_section_content.clsid_description}}</dd>
                                             </dl>
