#360 use key names found in rtfobj report

--- a/thehive-templates/FileInfo_5_0/long.html
+++ b/thehive-templates/FileInfo_5_0/long.html
@@ -525,10 +525,10 @@
                                         <td>{{r.submodule_section_content.address}}</td>
                                         <td>
                                             <dl class="dl-horizontal">
-                                                <dt>Type</dt>
+                                                <dt>Format_id</dt>
                                                 <dd>{{r.submodule_section_content.type}}</dd>
 
-                                                <dt>Classname</dt>
+                                                <dt>Class name</dt>
                                                 <dd>{{r.submodule_section_content.classname}}</dd>
 
                                                 <dt>Filename</dt>
@@ -540,13 +540,13 @@
                                                 <dt>Temp path</dt>
                                                 <dd>{{r.submodule_section_content.temp_path}}</dd>
 
-                                                <dt>Size</dt>
+                                                <dt>Data size</dt>
                                                 <dd>{{r.submodule_section_content.size}}</dd>
 
                                                 <dt>CLSID</dt>
                                                 <dd>{{r.submodule_section_content.clsid}}</dd>
 
-                                                <dt>CLSID description</dt>
+                                                <dt>Description</dt>
                                                 <dd>{{r.submodule_section_content.clsid_description}}</dd>
                                             </dl>
                                         </td>
