Fixes #375: Inserted ascii quotes, bumped URLhaus analyzer version

--- a/thehive-templates/URLhaus_1_1/long.html
+++ b/thehive-templates/URLhaus_1_1/long.html
@@ -20,7 +20,7 @@
         <tr>
           <td>{{r.dateadded}}</td>
           <td>
-            <a href="https://urlhaus.abuse.ch{{r.link}}" target=”_blank”>
+            <a href="https://urlhaus.abuse.ch{{r.link}}" target="_blank">
               {{r.malware_url}}
             </a>
           </td>
