--- a/thehive-templates/HIBP_Query_1_0/long.html
+++ b/thehive-templates/HIBP_Query_1_0/long.html
@@ -4,42 +4,43 @@
     </div>
     <div class="panel-body">
 		<!-- Domain details -->
-        <p ng-if="content.CompromisedAccounts.length == 0">
+        <p ng-if="!content.CompromisedAccounts || content.CompromisedAccounts.length == 0">
             Account was not Compromised.
         </p>
 		<!-- Accounts -->
-        <p ng-if="content.CompromisedAccounts.length != 0">
-        Compromised Accounts:
+        <p ng-if="content.CompromisedAccounts.length > 0">
+          Compromised Accounts: {{content.CompromisedAccounts.length}}
         </p>
-        <table class="table" ng-if="content.CompromisedAccounts.length != 0">
+        <table class="table" ng-if="content.CompromisedAccounts && content.CompromisedAccounts.length > 0">
             <thead>
+                <th width="120px">IsVerified</th>
                 <th>PwnCNT</th>
                 <th>Domain</th>
                 <th>IsSensitive</th>
                 <th>Name</th>
-                <th>Title</th>                
+                <th>Title</th>
                 <th>DataClasses</th>
                 <th>AddedDate</th>
-                <th>IsVerified</th>                
-                <th>Description</th>                                
             </thead>
             <tbody ng-repeat="r in content.CompromisedAccounts">
                 <tr>
+                    <td align="center">
+                      <span><i class="fa" ng-class="{true: 'fa-check-circle text-success', false: 'fa-times-circle text-danger'}[r.IsVerified]"></i></span>
+                    </td>
                     <td>{{r.PwnCount}}</td>
-                    <td>{{r.Domain}}</td>                    
+                    <td>{{r.Domain}}</td>
                     <td>{{r.IsSensitive}}</td>
                     <td>{{r.Name}}</td>
-                    <td>{{r.Title}}</td>              
+                    <td>{{r.Title}}</td>
                     <td><p ng-repeat="x in r.DataClasses">{{x}}</p></td>
                     <td>{{r.AddedDate}}</td>
-                    <td>{{r.IsVerified}}</td>
-                    <td>{{r.Description}}</td>                    
+                </tr>
+                <tr>
+                    <td colspan="8"><p>{{r.Description}}</p></td>
                 </tr>
             </tbody>
         </table>
-    </div>    
-
-
+    </div>
 </div>
 
 <div class="panel panel-danger" ng-if="!success">
@@ -50,4 +51,3 @@
         {{content.errorMessage}}
     </div>
 </div>
-
