#370 Fix template folder names, and log template of PassveDNS analyzer

--- a/thehive-templates/SecurityTrails_Whois_1_0/long.html
+++ b/thehive-templates/SecurityTrails_Whois_1_0/long.html
@@ -1,4 +1,4 @@
-<div class="report-FILEInfo" ng-if="success">
+<div class="report-SecurityTrails" ng-if="success">
   <div class="panel panel-info">
     <div class="panel-heading">
       SecurityTrails Whois report ({{content.domain}})
