--- a/thehive-templates/Cyberprotect_ThreatScore_1_0/long.html
+++ b/thehive-templates/Cyberprotect_ThreatScore_1_0/long.html
@@ -1,23 +1,23 @@
 <div class="panel panel-info" ng-if="success">
     <div class="panel-heading">
-        <a href="https://threatscore.cyberprotect.fr" target="_blank">threatscore.cyberprotect.fr</a> Cyberprotect threat scoring system
+        Cyberprotect threat scoring system <a href="https://threatscore.cyberprotect.fr" target="_blank"><i class="fa fa-external-link"></i></a>
         <br/> Report for
         <strong>{{artifact.data}}</strong>
     </div>
-    <div class="panel-body" ng-if="content.scores.length > 0">
+    <div class="panel-body" ng-if="content.result.scores.length > 0">
         <h4 class="dl-horizontal">{{content.scores.length}} scores found.</h4>
         <table class="table table-bordered">
             <tr>
                 <th>Date</th>
                 <th>Score</th>
             </tr>
-            <tr ng-repeat="score in ::content.scores">
+            <tr ng-repeat="score in ::content.result.scores">
                 <td>{{score.date}}</td>
                 <td>{{score.score}}</td>
             </tr>
         </table>
     </div>
-    <div class="panel-body" ng-if="content.scores.length < 1">
+    <div class="panel-body" ng-if="!(content.result.scores.length > 0)">
         No results found
     </div>
 </div>
