--- a/thehive-templates/Cyberprotect_ThreatScore_1_0/long.html
+++ b/thehive-templates/Cyberprotect_ThreatScore_1_0/long.html
@@ -4,20 +4,20 @@
         <br/> Report for
         <strong>{{artifact.data}}</strong>
     </div>
-    <div class="panel-body" ng-if="content.result.scores.length > 0">
+    <div class="panel-body" ng-if="content.scores.length > 0">
         <h4 class="dl-horizontal">{{content.scores.length}} scores found.</h4>
         <table class="table table-bordered">
             <tr>
                 <th>Date</th>
                 <th>Score</th>
             </tr>
-            <tr ng-repeat="score in ::content.result.scores">
+            <tr ng-repeat="score in ::content.scores">
                 <td>{{score.date}}</td>
                 <td>{{score.score}}</td>
             </tr>
         </table>
     </div>
-    <div class="panel-body" ng-if="!(content.result.scores.length > 0)">
+    <div class="panel-body" ng-if="!(content.scores.length > 0)">
         No results found
     </div>
 </div>
