--- a/thehive-templates/Cymon_2_1/long.html
+++ b/thehive-templates/Cymon_2_1/long.html
@@ -14,22 +14,22 @@
 
     </div>
     <div class="panel-body">
-       
+
         <h4>
             <strong>
                 {{(artifact.data || artifact.attachment.name) | fang}} is associated to:
             </strong>
         </h4>
-        <div >
-            <dl ng-repeat="(k,v) in content.Founds" class="dl-horizontal" >
+        <div>
+            <dl ng-repeat="(k,v) in content.Founds" class="dl-horizontal">
                 <dt ng-if="v">{{k}}</dt>
                 <dd ng-repeat="l in content[k]">{{l}}</dd>
             </dl>
         </div>
 
-        <dl class="dl-horizontal" >
+        <dl class="dl-horizontal">
             <dt>permalink</dt>
-            <dd ><a href=content.permalink>{{content.permalink}}</a></dd>
+            <dd><a href="{{content.permalink}}">{{content.permalink}}</a></dd>
         </dl>
 
     </div>
