--- a/thehive-templates/CuckooSandbox_Url_Analysis_1_0/long.html
+++ b/thehive-templates/CuckooSandbox_Url_Analysis_1_0/long.html
@@ -59,20 +59,18 @@
         </div>
         <div class="panel-body">
 
-            <div ng-if="content.hosts">
+            <div ng-if="content.domains">
                 <h4>Remote connections</h4>
                 <br>
                 <div>
                     <table class="table table-hover">
                         <tr>
-                            <th>Domain</th>
                             <th>IP</th>
-                            <th>Location</th>
+                            <th>Domain</th>
                         </tr>
-                        <tr ng-repeat="host in content.hosts track by $index">
-                            <td>{{host[1]}}</td>
-                            <td>{{host[0]}}</td>
-                            <td>{{host[2]}}</td>
+                        <tr ng-repeat="domains in content.domains track by $index">
+                            <td>{{domains[0]}}</td>
+                            <td>{{domains[1]}}</td>
                         </tr>
                     </table>
                 </div>
