--- a/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
+++ b/thehive-templates/CuckooSandbox_File_Analysis_Inet_1_0/long.html
@@ -59,20 +59,18 @@
         </div>
         <div class="panel-body">
 
-            <div ng-if="content.hosts">
+            <div ng-if="content.domains">
                 <h4>Remote connections</h4>
                 <br>
                 <div>
                     <table class="table table-hover">
                         <tr>
-                            <th>Domain</th>
                             <th>IP</th>
-                            <th>Location</th>
+                            <th>Domain</th>
                         </tr>
-                        <tr ng-repeat="host in content.hosts track by $index">
-                            <td>{{host[1]}}</td>
-                            <td>{{host[0]}}</td>
-                            <td>{{host[2]}}</td>
+                        <tr ng-repeat="domains in content.domains track by $index">
+                            <td>{{domains[0]}}</td>
+                            <td>{{domains[1]}}</td>
                         </tr>
                     </table>
                 </div>
@@ -105,8 +103,8 @@
             <div ng-if="content.yara">
                 <h4>Yara</h4>
                 <br>
-                <dl class="dl-horizontal" ng-repeat="yara in content.yara track by $index">
-                    <dd>{{ yara }}<dd>
+                <dl class="dl-horizontal">
+                    <dd>{{ content.yara }}<dd>
                 </dl>
             </div>
             <div ng-if="!content.yara">
