--- a/thehive-templates/BackscatterIO_Enrichment_1_0/long.html
+++ b/thehive-templates/BackscatterIO_Enrichment_1_0/long.html
@@ -3,10 +3,11 @@
         Backscatter.io results for <strong>{{artifact.data}}</strong>
     </div>
     <div class="panel-body">
-        <div ng-repeat="(k,v) in content.results">
-            <span><strong>{{k}}:</strong> {{v}}</spam>
-        </div>
-        <p ng-if="!content.results">No records found for {{artifact.data}}.</p>
+        <dl class="dl-horizontal" ng-repeat="(k,v) in content.results">
+            <dt>{{k}}</dt>
+            <dd>{{v || '-'}}</dd>
+        </dl>
+        <div class="empty-message" ng-if="!content.results">No records found for {{artifact.data}}</div>
     </div>
 </div>
 
