--- a/thehive-templates/IPinfo_Hosted_Domains_1.0/long.html
+++ b/thehive-templates/IPinfo_Hosted_Domains_1.0/long.html
@@ -1,4 +1,4 @@
-<div class="report-SecurityTrails" ng-if="success">
+<div class="report" ng-if="success">
   <div class="panel panel-info">
     <div class="panel-heading">
       IPinfo hosted domains
