--- a/thehive-templates/DNSSinkhole_1_0/long.html
+++ b/thehive-templates/DNSSinkhole_1_0/long.html
@@ -7,7 +7,7 @@
         <dt>Status</dt>
         <dd>
             <p style="font-size: 1.5em;">
-                <span class="label label-success" ng-if="content.is_sinkhole">
+                <span class="label label-danger" ng-if="content.is_sinkhole">
                     IP is sinkholed.
                 </span>
                 <span class="label label-info" ng-if="!content.is_sinkhole">
