--- a/thehive-templates/IntezerCommunity_1_0/long.html
+++ b/thehive-templates/IntezerCommunity_1_0/long.html
@@ -13,7 +13,7 @@
             </dl>
             <dl class="dl-horizontal">
                 <dt>Family</dt>
-                <dd>{{content.result.family_score}}</dd>
+                <dd>{{content.result.family_name}}</dd>
             </dl>
         </div>
 	</div>
