--- a/thehive-templates/Splunk_Search_Hash_3_0/long.html
+++ b/thehive-templates/Splunk_Search_Hash_3_0/long.html
@@ -14,8 +14,7 @@
     	</div>
     	<div class="panel-body">
     	    <dl class="dl-horizontal" ng-repeat="res in content.savedsearches">
-                <dt>{{res.savedsearch}}</dt>
-                <dd>{{res.length}} results recovered out of a total of {{res.resultCount}} results over {{res.eventCount}} events</dd>
+                <strong>{{res.savedsearch}}</strong>: {{res.length}} results recovered out of a total of {{res.resultCount}} results over {{res.eventCount}} events
             </dl>
     	</div>
     </div>
@@ -27,6 +26,7 @@
     	    <dl class="dl-horizontal">
                 <dt>Results : </dt>
                 <dd><div ng-class="{'text-warning': res.length<res.resultCount, 'text-success': res.length==res.resultCount}"><strong>{{res.length}}/{{res.resultCount}}</strong></div><div ng-if="res.note">Note: {{res.note}}</div></dd>
+                <dd><div class="text-danger" ng-if="res.error"><strong>Error: {{res.error}}</strong</div></dd>
                 <dt>Events : </dt>
                 <dd>{{res.eventCount}}</dd>
                 <dt ng-if="res.levels">Levels :</dt>
