--- a/thehive-templates/Splunk_Search_Registry_3_0/long.html
+++ b/thehive-templates/Splunk_Search_Registry_3_0/long.html
@@ -1,4 +1,4 @@
-ass="panel panel-danger" ng-if="!success">
+<div class="panel panel-danger" ng-if="!success">
     <div class="panel-heading">
         <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
     </div>
