Update EmailRep analyzer
Catch up the latest API response schema

--- a/thehive-templates/EmailRep_1_0/long.html
+++ b/thehive-templates/EmailRep_1_0/long.html
@@ -1,4 +1,4 @@
-<div class="report" ng-if="success">
+<div class="report-SecurityTrails" ng-if="success">
   <div class="panel panel-info">
     <div class="panel-heading">
       emailrep.io lookup ({{ content.mail || "-" }})
@@ -9,17 +9,21 @@
       </div>
       <div ng-if="(content | json) !== '{}'">
         <dl class=" dl-horizontal">
-          <dt>Score:</dt>
-          <dd class="wrap">{{ content.score || "-" }}</dd>
+          <dt>Reputation:</dt>
+          <dd class="wrap">{{ content.reputation || "-" }}</dd>
+        </dl>
+        <dl class=" dl-horizontal">
+          <dt>Suspicious:</dt>
+          <dd class="wrap">{{ content.suspicious || "-" }}</dd>
         </dl>
         <dl class="dl-horizontal">
           <dt>References:</dt>
           <dd class="wrap">{{ content.references || "-" }}</dd>
         </dl>
-        <dl class="dl-horizontal" ng-if="content.profiles.length !== 0">
+        <dl class="dl-horizontal" ng-if="content.details.profiles.length !== 0">
           <dt>Profiles:</dt>
           <dd class="wrap">
-            <ul ng-repeat="profile in content.profiles">
+            <ul ng-repeat="profile in content.details.profiles">
               <li>{{ profile }}</li>
             </ul>
           </dd>
