--- a/analyzers/LdapQuery/long.html
+++ b/analyzers/LdapQuery/long.html
@@ -1,6 +1,6 @@
-<div class="report-FILEInfo" ng-if="success">
+<div class="report-LdapQuery" ng-if="success">
     <style>
-        .report-FILEInfo dl {
+        .report-LdapQuery dl {
             margin-bottom: 2px;
         }
     </style>
